# ff_simple_tutorial

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_all.sh  build_ffmpeg.sh  build_sdl.sh  decodingtoyuv.c  encodefromyuvtoh264.c  errflags.h  main.c  util.c  videodecodingheader.h
